--- a/src/css/data.css
+++ b/src/css/data.css
@@ -51,7 +51,7 @@
     text-align: center;
     /* vertical-align: baseline; */
     background-color: whitesmoke;
-    padding: 10px 0;
+    padding: 10px 3px;
     overflow: hidden;
     min-height: 26px;
     max-height: 26px;
